test/cli/test-mutating-policy/mutate-existing-cel-expression/patched-target.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    mutated: "true"
  name: target-cm
  namespace: test-ns
data:
  key: value
