test/cli/test-mutating-policy/mutate-existing-cel-expression/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: MutatingPolicy
metadata:
  name: mutate-existing-cel-expr
spec:
  evaluation:
    mutateExisting:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE"]
      resources: ["secrets"]
  targetMatchConstraints:
    expression: >
      resource.get("v1", "configmaps", object.metadata.namespace, "target-cm")
  mutations:
  - patchType: ApplyConfiguration
    applyConfiguration:
      expression: >
        Object{
          metadata: Object.metadata{
            labels: Object.metadata.labels{
              mutated: "true"
            }
          }
        }
