test/cli/test-mutating-policy/mutate-existing-cel-expression/target.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: target-cm
  namespace: test-ns
data:
  key: value
