test/cli/test-mutating-policy/mutate-existing-cel-expression/trigger.yaml
apiVersion: v1
kind: Secret
metadata:
  name: test-secret
  namespace: test-ns
type: Opaque
data:
  key: dmFsdWU=
